--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,15 @@
     margin: 0;
 }
 
+:root {
+    --text: #fbfbfb;
+    --light-text: #242424;
+    --bg-color: #0a0a0a;
+    --body-font: "Inter", sans-serif;
+    --header-font: "Special Gothic Expanded One", sans-serif;
+    font-size: 17.65px;
+}
+
 /* 3. Enable keyword animations */
 @media (prefers-reduced-motion: no-preference) {
     html {
@@ -16,7 +25,8 @@
 }
 
 body {
-    font-family: "Inter", sans-serif;
+    font-family: var(--body-font);
+    color: var(--bg-color);
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
 }
@@ -58,6 +68,7 @@ h4,
 h5,
 h6 {
     text-wrap: balance;
+    font-family: var(--header-font);
 }
 
 /*
@@ -66,4 +77,103 @@ h6 {
 #root,
 #__next {
     isolation: isolate;
+}
+
+header nav {
+    padding: 1rem;
+    display: flex;
+    place-content: space-between;
+    place-items: center;
+    background-color: var(--bg-color);
+    color: var(--text);
+    position: relative;
+}
+
+#nav_menu {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+#nav_menu img {
+    height: 1.3rem;
+}
+
+.nav_list {
+    list-style: none;
+    display: grid;
+    place-items: center;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 3.5rem;
+    width: 100%;
+    background-color: var(--bg-color);
+}
+
+.list_item_link {
+    text-decoration: none;
+    color: var(--text);
+}
+
+header .hero {
+    padding: 1.52rem 1rem;
+    font-family: var(--header-font);
+}
+
+header .hero p {
+    font-size: 1.5rem;
+    color: gray;
+}
+
+header .hero h1 {
+    font-size: 4.3rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+main .buttons {
+    display: grid;
+    gap: 1rem;
+    margin: 1.5rem 1rem;
+}
+
+.buttons button {
+    padding: 1rem;
+    border: none;
+    border-radius: 0.35rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+
+.buttons button.started {
+    border: 2px solid var(--bg-color);
+    background-color: inherit;
+}
+
+.buttons button.demo {
+    background-color: var(--bg-color);
+    color: var(--text);
+}
+
+main .api_features {
+    margin: 3rem 1rem;
+}
+
+.api_features h2 {
+    font-size: 2.2rem;
+}
+
+.api_features p {
+    font-size: 1.05rem;
+    color: var(--light-text);
+}
+
+/*
+  hidden items
+*/
+.hidden {
+    display: none;
 }
